[package]
name = "store"
version = "0.1.0"
authors = ["Simon Persson <simon.persson@mykolab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallbitvec = "2.4"

[dev-dependencies]
criterion = "0.3"
stash = "*"
slotmap = "*"
rand = "0.7"

[[bench]]
name = "basic"
harness = false
